--- a/.github/workflows/sdk-release.yaml
+++ b/.github/workflows/sdk-release.yaml
@@ -11,13 +11,13 @@ jobs:
   generate-cdylibs:
     uses: IronCoreLabs/workflows/.github/workflows/rust-artifact.yaml@rust-artifact-v0
     with:
-      os_matrix: '["ubuntu-24.04", "ubuntu-24.04-arm", "macos-12", "macos-14"]'
+      os_matrix: '["buildjet-2vcpu-ubuntu-2004", "buildjet-4vcpu-ubuntu-2204-arm", "macos-12", "macos-14"]'
       build_profile: "release"
     secrets: inherit
 
   kotlin-release:
     needs: generate-cdylibs
-    runs-on: ubuntu-24.04
+    runs-on: buildjet-2vcpu-ubuntu-2004
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -25,8 +25,8 @@ jobs:
           path: ${{ github.workspace }}/kotlin/src/main/resources/
       - name: Rename directories
         run: |
-          mv ubuntu-24.04- linux-x86-64
-          mv ubuntu-24.04-arm- linux-arm
+          mv buildjet-2vcpu-ubuntu-2004- linux-x86-64
+          mv buildjet-4vcpu-ubuntu-2204-arm- linux-arm
           mv macos-12- darwin-x86-64
           mv macos-14- darwin-aarch64
         working-directory: kotlin/src/main/resources/
@@ -53,19 +53,23 @@ jobs:
         env:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
-          
+
   java-release:
     needs: generate-cdylibs
-    runs-on: ubuntu-24.04
+    runs-on: buildjet-2vcpu-ubuntu-2004
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "21"
       - uses: actions/download-artifact@v4
         with:
           path: ${{ github.workspace }}/java/src/main/resources/
       - name: Rename directories
         run: |
-          mv ubuntu-24.04- linux-x86-64
-          mv ubuntu-24.04-arm- linux-arm
+          mv buildjet-2vcpu-ubuntu-2004- linux-x86-64
+          mv buildjet-4vcpu-ubuntu-2204-arm- linux-arm
           mv macos-12- darwin-x86-64
           mv macos-14- darwin-aarch64
         working-directory: java/src/main/resources/
