--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,11 @@ ring = "0.17"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = { version = "1.0.117", features = ["float_roundtrip"] }
 thiserror = "1.0.63"
-uniffi = { git = "https://github.com/mozilla/uniffi-rs", branch = "main", features = [
+uniffi = { version = "0.28.1", features = [
    "tokio",
    "cli",
 ] }
-uniffi-bindgen-java = { git = "https://github.com/IronCoreLabs/uniffi-bindgen-java", branch = "main" }
+uniffi-bindgen-java = "0.1.0"
 z85 = "3.0.5"
 
 [dev-dependencies]
@@ -63,7 +63,7 @@ hex-literal = "0.4.1"
 lazy_static = "1.4"
 proptest = "1.5.0"
 tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
-uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs", branch = "main" }
+uniffi_bindgen = "0.28.1"
 z85 = "3.0.5"
 
 [features]
