--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,5 @@
 [toolchain]
 profile = "default"
-channel = "1.85.0"
+# channel = "1.85.0"
+channel = "nightly"
 components = ["rust-src", "rust-analyzer", "llvm-tools"]
