Exclude cargo-metadata

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,7 @@ updates:
       # These will get their own PRs
       - "rand*"
       - "uniffi*"
+      - "cargo-metadata" # must be same as uniffi uses
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
