--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
 thiserror = "2.0.12"
 uniffi = { version = "0.28.2", features = ["tokio", "cli"] }
-uniffi-bindgen-java = "0.1.0"
+uniffi-bindgen-java = "=0.1.0"
 z85 = "3.0.6"
 
 [dev-dependencies]
