--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,4 @@
 [toolchain]
 profile = "default"
-# channel = "1.85.0"
-channel = "nightly"
+channel = "1.87.0"
 components = ["rust-src", "rust-analyzer", "llvm-tools"]
