--- a/examples/rust/standalone/simple-roundtrip/Cargo.toml
+++ b/examples/rust/standalone/simple-roundtrip/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ironcore-alloy = { git = "https://github.com/IronCoreLabs/ironcore-alloy.git", tag = "0.9.1" }
+ironcore-alloy = "0.12.0"
 serde = "1"
 serde_json = "1.0.108"
 tokio = { version = "1", features = [
-  "rt-multi-thread",
-  "time",
-  "sync",
-  "macros",
+    "rt-multi-thread",
+    "time",
+    "sync",
+    "macros",
 ] }
