--- a/python/ironcore-alloy/.readthedocs.yaml
+++ b/python/ironcore-alloy/.readthedocs.yaml
@@ -13,4 +13,6 @@ build:
   - ~/.cargo/bin/cargo run --bin uniffi-bindgen generate --library ./target/release/libironcore_alloy.so --language python  --out-dir python/ironcore-alloy/ironcore_alloy
   # actual doc building part
   - pip install -v "hatch==1.14.1"
-  - cd python/ironcore-alloy && hatch run docs:build -- --site-dir $READTHEDOCS_OUTPUT/html
+  - env | grep HATCH || true
+  - echo $READTHEDOCS_OUTPUT
+  - cd python/ironcore-alloy && hatch run docs:build --site-dir $READTHEDOCS_OUTPUT/html
