create the env?

--- a/python/ironcore-alloy/.readthedocs.yaml
+++ b/python/ironcore-alloy/.readthedocs.yaml
@@ -17,5 +17,6 @@ build:
   - env | grep -i hatch || true
   - env | grep -i filter || true
   - hatch --version
+  - hatch env create docs
   - hatch env show
   - cd python/ironcore-alloy && hatch run docs:build --site-dir $READTHEDOCS_OUTPUT/html
