--- a/python/ironcore-alloy/pyproject.toml
+++ b/python/ironcore-alloy/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = ["mkdocs.material==9.4.8", "mkdocstrings-python==1.10.8"]
 [tool.hatch.envs.docs.scripts]
 build = "mkdocs build --clean --strict {args}"
 serve = "mkdocs serve --dev-addr localhost:8000 {args}"
+buildRtd = "mkdocs build --clean --strict --site-dir $READTHEDOCS_OUTPUT/html"
 
 [tool.hatch.envs.test]
 dependencies = [
@@ -52,7 +53,7 @@ dependencies = [
     "pytest-cov==4.1.0",
     "pytest-metadata==3.0.0",
     "pytest-asyncio==0.21.1",
-    "aiohttp==3.11.16"
+    "aiohttp==3.11.16",
 ]
 
 [tool.hatch.envs.test.scripts]
