--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ bytes = { version = "1.10.1", features = ["serde"] }
 convert_case = "0.8.0"
 futures = "0.3.31"
 hmac = { version = "0.12.1", features = ["std"] }
-ironcore-documents = { git = "https://github.com/IronCoreLabs/ironcore-documents.git", branch = "add-secret-debug" }
+ironcore-documents = "0.2.2"
 itertools = "0.14"
 ndarray = "0.16.0"
 ndarray-rand = "0.15.0"
