--- a/.github/workflows/sdk-ci.yaml
+++ b/.github/workflows/sdk-ci.yaml
@@ -12,7 +12,7 @@ jobs:
     uses: IronCoreLabs/workflows/.github/workflows/rust-artifact.yaml@rust-artifact-v0
     with:
       # This should stay in sync with the `runs-on` from the other jobs in this file
-      os_matrix: '["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]'
+      os_matrix: '["ubuntu-24.04", "ubuntu-24.04-arm", "macos-15-intel", "macos-14"]'
       build_profile: "release"
     secrets: inherit
 
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         # This should stay in sync with the `os_matrix` above
-        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-15-intel", "macos-14"]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-java@v5
@@ -49,7 +49,7 @@ jobs:
     strategy:
       matrix:
         # This should stay in sync with the `os_matrix` above
-        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-15-intel", "macos-14"]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-java@v5
@@ -77,7 +77,7 @@ jobs:
       fail-fast: false
       matrix:
         # This should stay in sync with the `os_matrix` above and the `runs-on` from the other jobs in this file
-        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-14"]
+        runs-on: ["ubuntu-24.04", "ubuntu-24.04-arm", "macos-15-intel", "macos-14"]
     steps:
       - uses: actions/checkout@v5
       - uses: actions/download-artifact@v6
