--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,8 +62,8 @@ ring = "0.17"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 thiserror = "2.0.17"
-uniffi = { version = "0.29.4", features = ["tokio", "cli"] }
-uniffi-bindgen-java = "0.2.1"
+uniffi = { version = "0.30.0", features = ["tokio", "cli"] }
+uniffi-bindgen-java = { git = "https://github.com/IronCoreLabs/uniffi-bindgen-java.git", branch = "uniffi-0.30-upgrade" }
 z85 = "3.0.6"
 
 [dev-dependencies]
@@ -81,7 +81,7 @@ hex-literal = "1.1.0"
 lazy_static = "1.5"
 proptest = "1.9.0"
 tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
-uniffi_bindgen = "0.29.2"
+uniffi_bindgen = "0.30.0"
 z85 = "3.0.6"
 
 [[bench]]
